force-app/main/default/objects/redwing__LMS_Plugin__c/redwing__LMS_Plugin__c.object-meta.xml
<CustomObject>
    <label>LMS Plugin</label>
    <nameField>
        <displayFormat>LLN-{0000000}</displayFormat>
        <label>LMS Plugin ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMS Plugins</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>