force-app/main/default/objects/redwing__LMS_Plugin__c/fields/redwing__Order__c.field-meta.xml
<CustomField>
    <fullName>redwing__Order__c</fullName>
    <inlineHelpText>Order in which this plugin will be executed</inlineHelpText>
    <label>Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>