force-app/main/default/objects/redwing__LMS_Plugin__c/fields/redwing__Plugin_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Plugin_Name__c</fullName>
    <description>User object field expected value.</description>
    <label>Plugin Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>