force-app/main/default/objects/redwing__LMS_Plugin__c/fields/redwing__Plugin_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Plugin_Type__c</fullName>
    <label>Plugin Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Learning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>