force-app/main/default/objects/redwing__LMS_Plugin__c/fields/redwing__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Record_Type__c</fullName>
    <description>Learning Record Type Name</description>
    <externalId>true</externalId>
    <inlineHelpText>Learning Record Type Name for which this plugin will be executed</inlineHelpText>
    <label>Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>