force-app/main/default/objects/redwing__LMS_Plugin__c/validationRules/redwing__RecordType_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__RecordType_Required</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(redwing__Plugin_Type__c) == &quot;Learning&quot; &amp;&amp; ISBLANK(redwing__Record_Type__c)</errorConditionFormula>
    <errorMessage>Record Type must be defined for Learning Plugins</errorMessage>
</ValidationRule>