force-app/main/default/objects/redwing__LMS_Plugin__c/listViews/redwing__All.listView-meta.xml
<ListView>
    <fullName>redwing__All</fullName>
    <columns>NAME</columns>
    <columns>redwing__Plugin_Type__c</columns>
    <columns>redwing__Plugin_Name__c</columns>
    <columns>redwing__Record_Type__c</columns>
    <columns>redwing__Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>